# DVA474-DVA490-MDU-C2-STAD

./: .gitignore  LICENSE  README.md
src/: .~lock.Documentation of arucoTracker CPP Node  Code.odt#  Untitled Document 1  coordinates.txt  run video streaming.sh  udp_aruco_receiver.cpp
src/aruco_tracker/: CMakeLists.txt  package.xml
src/aruco_tracker/config/: aruco_tracker_params.yaml
src/aruco_tracker/src/: aruco_tracker.cpp
src/ros2_tes_cvBridge/src/cv_bridge_test/: CMakeLists.txt  package.xml
src/ros2_tes_cvBridge/src/cv_bridge_test/src/: cv_bridge_test.cpp
uav_ros2_ws/src/MAVSDK/examples/offboard/: CMakeLists.txt
uav_ros2_ws/src/MAVSDK/examples/takeoff_and_land/: takeoff_and_land.cpp
uav_ros2_ws/src/libs/sincere/: Makefile
uav_ros2_ws/src/uav_cpp/: CMakeLists.txt  package.xml
uav_ros2_ws/src/uav_cpp/src/uav_main/: control_mavsdk.cpp  engine.c  engine.cpp  main.cpp.redundant  offboard_main.cpp  vision.h
uav_ros2_ws/src/uav_msgs/: package.xml
uav_ros2_ws/src/uav_py/: package.xml  setup.py  vision_node_fixed.py
uav_ros2_ws/src/uav_py/uav_py/: aruco_tracking_node.py  environment.py  test_detection.py  vision_node.py
uav_ros2_ws/src/uav_py/uav_py.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
