<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>cv_bridge_test</name>
  <version>0.0.0</version>
  <description>The cv_bridge_test package</description>
  <maintainer email="chisom@todo.todo">chisom</maintainer>
  <license>Apache-2.0</license>
  
  <!-- Remove the generic <depend> tags and keep only <exec_depend> -->
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
</package>

